# steam-price-checker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: Game.hpp  HttpClient.hpp  Paginator.hpp  SteamApiFetcher.hpp  SteamGameRepository.hpp
include/itf/: IGameRepository.hpp  IHttpClient.hpp
include/utils/: Print.hpp
src/: CMakeLists.txt  Game.cpp  HttpClient.cpp  SteamApiFetcher.cpp  SteamGameRepository.cpp  main.cpp
test/: CMakeLists.txt  TestGame.cpp  TestPaginator.cpp  TestSteamApiFetcher.cpp  TestSteamGameRepository.cpp  test.cpp
test/mocks/: MockHttpClient.hpp
test/stubs/: StubsHttpClient.hpp
